// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package localstacks3;

option go_package = "namespacelabs.dev/foundation/universe/development/localstack/localstacks3";

import "google/protobuf/empty.proto";

message AddRequest {
  string filename = 1;
  string contents = 2;
}

message GetRequest {
  string filename = 1;
}

message GetResponse {
  string contents = 1;
}

service S3DemoService {
  rpc Add(AddRequest) returns (google.protobuf.Empty);
  rpc Get(GetRequest) returns (GetResponse);
}
